--- a/.env.example
+++ b/.env.example
@@ -73,3 +73,8 @@ METRICS_INTERVAL=30s
 # Health Check Configuration
 HEALTH_ENABLED=true
 HEALTH_TIMEOUT=5s
+
+# Application Information
+APP_SUPPORT_NAME=Network Engineering Team
+APP_SUPPORT_EMAIL=neteng@example.com
+APP_SUPPORT_URL=https://github.com/your-org/junoscommander
