--- a/.env.example
+++ b/.env.example
@@ -77,4 +77,4 @@ HEALTH_TIMEOUT=5s
 # Application Information
 APP_SUPPORT_NAME=Network Engineering Team
 APP_SUPPORT_EMAIL=neteng@example.com
-APP_SUPPORT_URL=https://github.com/your-org/junoscommander
+APP_SUPPORT_URL=https://brndnsvr.com/junoscommander
